<resources>
    <string name="app_name">HomeAutomation</string>
    <string name="welcome">Welcome!!</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="sign_up">Sign up</string>
    <string name="background_shape">background shape</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome back!!</string>
    <string name="don_t_have_an_account_signup_here">Don\'t have an account? Signup</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Signin</string>
    <string name="get_started">GET STARTED</string>
</resources>