<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpScreen">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="272dp"
        android:layout_height="538dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="244dp"
        android:rotation="-25"
        android:contentDescription="@string/background_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shape1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="380dp"
        android:rotation="64"
        android:contentDescription="@string/background_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/shape1" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="224dp"
        android:layout_height="422dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="280dp"
        android:rotation="65"
        android:contentDescription="@string/background_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shape1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="35dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/shape2"
        android:orientation="vertical"
        android:contentDescription="@string/background_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="188dp"
                android:paddingStart="32dp"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="@dimen/heading_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry,SpUsage" />

            <EditText
                android:id="@+id/nameEditText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="36dp"
                android:layout_marginRight="32dp"
                android:ems="10"
                android:hint="@string/enter_your_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="@dimen/default_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcomeText"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/phoneNumberEditText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="36dp"
                android:layout_marginRight="32dp"
                android:ems="10"
                android:hint="@string/enter_phone_number"
                android:inputType="number"
                android:maxLength="10"
                android:minHeight="48dp"
                android:textSize="@dimen/default_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameEditText"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/signupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/teal_700"
                android:padding="12dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="@dimen/default_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberEditText"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/signinText"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="52dp"
                android:paddingStart="22dp"
                android:paddingEnd="22dp"
                android:text="@string/already_have_an_account_sign_in_here"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>